# ML-Assignment2-Q5

./: .gitignore  ARCHITECTURE_UPDATE.md  BUILD_AND_TEST_PROGRESS.md  CMakeLists.txt  DATA_FORMAT_ISSUE.md  FULL_TRAINING_GUIDE.md  IMPLEMENTATION_GUIDE.md  INFERENCE_GUIDE.md  MEMORY_FIX.md  PIPELINE_EXPLANATION.md  QUICKSTART.md  README_STYLE_DETECTION.md  START_TRAINING.md  SUBMISSION_FIX_SUMMARY.md  SUMMARY.md  TRAINING_SUCCESS.md  USAGE_GUIDE.md  conf.cfg  debug_model.py  example_usage.py  infer_style.py  infer_style_ge2e.py  infer_style_old.py  manage_training.sh  quickstart.sh  run_inference.sh  run_training.sh  style_model.py  style_model_new.py  submission.csv  submission_ge2e.csv  submission_medsub.csv  submission_sample.csv  test_style_py.py  test_system.py  test_updated_architecture.py  train_correct.sh  train_full.sh  train_full_scale.py  train_gradual.py  (+6 more)
minizero/: CMakeLists.txt
minizero/minizero/: CMakeLists.txt
minizero/minizero/environment/: CMakeLists.txt
minizero/minizero/utils/: vector_map.h
models/full_training_medium/: full_training_config.json  training_config.json
models/full_training_test/: full_training_config.json  training_config.json
models/medium_gradual/: training_config.json
models/medium_lazy/: training_config.json  training_log.txt
models/medium_subset/: training_config.json  training_log.txt
models/medium_with_val/: training_config.json
models/test_lazy/: training_config.json
models/test_run/: training_config.json
models/test_with_val/: training_config.json
scripts/: start-container.sh  train-sl.sh
style_detection/: CMakeLists.txt  main.cpp  pybind.cpp  sd_configuration.cpp  sd_configuration.h  sd_console.h  sd_data_loader.cpp  sd_data_loader.h  sd_mode_handler.cpp  sd_mode_handler.h
style_detection/code/: testing.py  train.py
style_detection/code/encoder/: model.py  train.py
test_model/: training_config.json
